--- a/app/views/artists/edit.html.erb
+++ b/app/views/artists/edit.html.erb
@@ -1,2 +1,7 @@
 <h1>Artists#edit</h1>
 <p>Find me in app/views/artists/edit.html.erb</p>
+<%= form_for(@artist) do |f|%>
+<%= f.text_field :name%>
+<%= f.text_field :bio%>
+<%= f.submit%>
+<%end%>
