--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -1,2 +1,10 @@
 <h1>Songs#edit</h1>
-<p>Find me in app/views/songs/edit.html.erb</p>
+<%=form_for(@song) do |f|%>
+    <%=f.label 'name'%>
+    <%=f.text_field 'song[name]'%>
+    <%=f.label 'artist'%>
+    <%=f.text_field 'song[artist_id]'%>
+    <%=f.label 'genre'%>
+    <%=f.text_field 'song[genre_id]'%>
+    <%=f.submit 'Update Song'%>
+<%end%>
