--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -1,10 +1,10 @@
 <h1>Songs#edit</h1>
-<%=form_for(@song) do |f|%>
+<%=form_for(@song, url: {action: "update"}) do |f|%>
     <%=f.label 'name'%>
-    <%=f.text_field 'song[name]'%>
+    <%=f.text_field :name%>
     <%=f.label 'artist'%>
-    <%=f.text_field 'song[artist_id]'%>
+    <%=f.text_field :artist_id%>
     <%=f.label 'genre'%>
-    <%=f.text_field 'song[genre_id]'%>
+    <%=f.text_field :genre_id%>
     <%=f.submit 'Update Song'%>
 <%end%>
